fix letter-spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@
     background-color: #f5f5f5;
     scroll-behavior: smooth;
     font-family: Raleway;
-    letter-spacing: 1.2px;
+    letter-spacing: 1.0px;
   }
   
   html {
